<?xml version ="1.0" encoding ="utf-8"?><!--  Learn More about how to use App Actions: https://developer.android.com/guide/actions/index.html -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chatrooms">

    <fragment
        android:id="@+id/nav_chatrooms"
        android:name="com.helloworld.myapplication.frag_chatrooms"
        android:label="@string/menu_chatrooms"
        tools:layout="@layout/fragment_chatrooms" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.helloworld.myapplication.frag_users"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_myprofile"
        android:name="com.helloworld.myapplication.frag_profile"
        android:label="@string/menu_myprofile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_previous_ride"
        android:name="com.helloworld.myapplication.frag_previousRide"
        android:label="@string/menu_priviousRide"
        tools:layout="@layout/fragment_frag_previous_ride"/>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.helloworld.myapplication.frag_logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>
