<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    tools:context=".EditProfileActivity">

    <include layout="@layout/toolbar_for_sidebar">

    </include>

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/editProfileImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/editlastName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editGender"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editlastName" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGender" />

    <View
        android:id="@+id/view3"
        android:layout_width="5dp"
        android:layout_height="85dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="39dp"
        android:text="@string/edit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="39dp"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/editCity"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>